--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "babel-plugin-istanbul": "^4.1.3",
     "babel-plugin-transform-async-to-module-method": "^6.16.0",
     "babel-plugin-transform-function-bind": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
